--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -142,10 +142,8 @@
                 height: 50px;
 
                 .product-mdf-img {
-                    height: 100%;
-                    background-size: contain;
-                    background-position: center;
-                    background-repeat: no-repeat;
+                    max-height: 100%;
+                    max-width: 100%;
                     padding: 2px;
                 }
             }
