--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -752,15 +752,18 @@
 .product_container .product_content .product-info {
   display: flex;
   width: 100%;
-  height: 520px;
 }
 .product_container .product_content .product-info .product-images {
   display: flex;
+  align-items: center;
   width: 50%;
   margin: 0 12px;
+  max-height: 520px;
+  position: sticky;
+  top: 75px;
 }
 .product_container .product_content .product-info .product-images .gallery {
-  width: 20%;
+  width: 18%;
   height: 100%;
   max-height: 500px;
   display: flex;
@@ -774,7 +777,7 @@
   margin: 5px 0;
 }
 .product_container .product_content .product-info .product-images .gallery-slider {
-  width: 20%;
+  width: 18%;
   padding: 15px 0;
 }
 .product_container .product_content .product-info .product-images .gallery-slider .slick-slide div img {
@@ -808,14 +811,14 @@
 .product_container .product_content .product-info .product-images .image-slider {
   display: flex;
   align-items: center;
-  width: 80%;
+  width: 82%;
 }
 .product_container .product_content .product-info .product-images .image-slider .slick-list .slick-track {
   display: flex;
   align-items: center;
 }
 .product_container .product_content .product-info .product-images .image-slider .slick-list .slick-slide {
-  padding: 0 25px;
+  padding: 0 10px;
   display: flex;
   justify-content: center;
 }
@@ -827,6 +830,8 @@
   width: 35px;
   height: 35px;
   z-index: 10;
+  border: 3px solid transparent;
+  background-color: rgba(255, 255, 255, 0.5);
 }
 .product_container .product_content .product-info .product-images .image-slider .slick-arrow::before {
   content: "";
@@ -951,35 +956,165 @@
 .product_container .product_content .product-info .product-details .product-buy-block button:hover {
   background-color: #4b5673;
 }
-.product_container .product_content .description {
-  width: 100%;
-  padding: 0 20px;
-}
-.product_container .product_content .description .characteristics-block {
+.product_container .product_content .product-info .product-details .characteristics-block {
   margin: 25px 0;
-  width: 50%;
 }
-.product_container .product_content .description .characteristics-block .subtitle {
+.product_container .product_content .product-info .product-details .characteristics-block .subtitle {
   margin-bottom: 15px;
   font-size: 23px;
 }
-.product_container .product_content .description .characteristics-block .characteristic {
+.product_container .product_content .product-info .product-details .characteristics-block .characteristic {
   display: flex;
   align-items: center;
   padding: 5px 0;
   border-bottom: 1px solid #ebebeb;
 }
-.product_container .product_content .description .characteristics-block .characteristic .title {
+.product_container .product_content .product-info .product-details .characteristics-block .characteristic .title {
   width: 35%;
   padding: 5px 0;
   font-weight: bold;
   display: inline-block;
+  font-size: 15px;
 }
-.product_container .product_content .description .characteristics-block .characteristic .body {
+.product_container .product_content .product-info .product-details .characteristics-block .characteristic .body {
   width: 60%;
   margin-left: 10px;
   padding: 5px 0;
   display: inline-block;
+  font-size: 15px;
+}
+.product_container .product_content .product-info .product-details .description {
+  margin: 10px 0;
+}
+.product_container .product_content .product-info .product-details .description .short-description-container,
+.product_container .product_content .product-info .product-details .description .add-info-container {
+  padding: 0 3px;
+  border-bottom: 1px solid #ebebeb;
+}
+.product_container .product_content .product-info .product-details .description .short-description-container .short-description-header,
+.product_container .product_content .product-info .product-details .description .short-description-container .add-info-header,
+.product_container .product_content .product-info .product-details .description .add-info-container .short-description-header,
+.product_container .product_content .product-info .product-details .description .add-info-container .add-info-header {
+  font-size: 15px;
+  padding: 10px 0;
+  cursor: pointer;
+  position: relative;
+}
+.product_container .product_content .product-info .product-details .description .short-description-container .short-description-header::after,
+.product_container .product_content .product-info .product-details .description .short-description-container .add-info-header::after,
+.product_container .product_content .product-info .product-details .description .add-info-container .short-description-header::after,
+.product_container .product_content .product-info .product-details .description .add-info-container .add-info-header::after {
+  top: 7px;
+  right: 8px;
+  font-size: 20px;
+  font-weight: normal;
+  position: absolute;
+  color: #5f6d92;
+}
+.product_container .product_content .product-info .product-details .description .short-description-container .short-description-header.down,
+.product_container .product_content .product-info .product-details .description .short-description-container .add-info-header.down,
+.product_container .product_content .product-info .product-details .description .add-info-container .short-description-header.down,
+.product_container .product_content .product-info .product-details .description .add-info-container .add-info-header.down {
+  font-weight: normal;
+}
+.product_container .product_content .product-info .product-details .description .short-description-container .short-description-header.down::after,
+.product_container .product_content .product-info .product-details .description .short-description-container .add-info-header.down::after,
+.product_container .product_content .product-info .product-details .description .add-info-container .short-description-header.down::after,
+.product_container .product_content .product-info .product-details .description .add-info-container .add-info-header.down::after {
+  content: "+";
+}
+.product_container .product_content .product-info .product-details .description .short-description-container .short-description-header.up,
+.product_container .product_content .product-info .product-details .description .short-description-container .add-info-header.up,
+.product_container .product_content .product-info .product-details .description .add-info-container .short-description-header.up,
+.product_container .product_content .product-info .product-details .description .add-info-container .add-info-header.up {
+  font-weight: bold;
+}
+.product_container .product_content .product-info .product-details .description .short-description-container .short-description-header.up::after,
+.product_container .product_content .product-info .product-details .description .short-description-container .add-info-header.up::after,
+.product_container .product_content .product-info .product-details .description .add-info-container .short-description-header.up::after,
+.product_container .product_content .product-info .product-details .description .add-info-container .add-info-header.up::after {
+  content: "-";
+}
+.product_container .product_content .product-info .product-details .description .short-description-container .short-description-content,
+.product_container .product_content .product-info .product-details .description .short-description-container .add-info-content,
+.product_container .product_content .product-info .product-details .description .add-info-container .short-description-content,
+.product_container .product_content .product-info .product-details .description .add-info-container .add-info-content {
+  margin: 10px 0 25px 0;
+  overflow: hidden;
+  transition: 0.4s all ease-in-out;
+}
+.product_container .product_content .product-info .product-details .description .short-description-container .short-description-content.hidden,
+.product_container .product_content .product-info .product-details .description .short-description-container .add-info-content.hidden,
+.product_container .product_content .product-info .product-details .description .add-info-container .short-description-content.hidden,
+.product_container .product_content .product-info .product-details .description .add-info-container .add-info-content.hidden {
+  margin: 0;
+  height: 0 !important;
+}
+.product_container .product_content .product-info .product-details .description .short-description-container .short-description-content .short-description-item,
+.product_container .product_content .product-info .product-details .description .short-description-container .short-description-content .title,
+.product_container .product_content .product-info .product-details .description .short-description-container .add-info-content .short-description-item,
+.product_container .product_content .product-info .product-details .description .short-description-container .add-info-content .title,
+.product_container .product_content .product-info .product-details .description .add-info-container .short-description-content .short-description-item,
+.product_container .product_content .product-info .product-details .description .add-info-container .short-description-content .title,
+.product_container .product_content .product-info .product-details .description .add-info-container .add-info-content .short-description-item,
+.product_container .product_content .product-info .product-details .description .add-info-container .add-info-content .title {
+  font-size: 15px;
+  margin: 20px 0;
+  line-height: 25px;
+}
+.product_container .product_content .product-info .product-details .description .short-description-container .short-description-content .short-description-item:first-child,
+.product_container .product_content .product-info .product-details .description .short-description-container .short-description-content .title:first-child,
+.product_container .product_content .product-info .product-details .description .short-description-container .add-info-content .short-description-item:first-child,
+.product_container .product_content .product-info .product-details .description .short-description-container .add-info-content .title:first-child,
+.product_container .product_content .product-info .product-details .description .add-info-container .short-description-content .short-description-item:first-child,
+.product_container .product_content .product-info .product-details .description .add-info-container .short-description-content .title:first-child,
+.product_container .product_content .product-info .product-details .description .add-info-container .add-info-content .short-description-item:first-child,
+.product_container .product_content .product-info .product-details .description .add-info-container .add-info-content .title:first-child {
+  margin-top: 0;
+}
+.product_container .product_content .product-info .product-details .description .short-description-container .short-description-content .short-description-item:last-child,
+.product_container .product_content .product-info .product-details .description .short-description-container .short-description-content .title:last-child,
+.product_container .product_content .product-info .product-details .description .short-description-container .add-info-content .short-description-item:last-child,
+.product_container .product_content .product-info .product-details .description .short-description-container .add-info-content .title:last-child,
+.product_container .product_content .product-info .product-details .description .add-info-container .short-description-content .short-description-item:last-child,
+.product_container .product_content .product-info .product-details .description .add-info-container .short-description-content .title:last-child,
+.product_container .product_content .product-info .product-details .description .add-info-container .add-info-content .short-description-item:last-child,
+.product_container .product_content .product-info .product-details .description .add-info-container .add-info-content .title:last-child {
+  margin-bottom: 0;
+}
+.product_container .product_content .product-info .product-details .description .short-description-container .short-description-content ul,
+.product_container .product_content .product-info .product-details .description .short-description-container .add-info-content ul,
+.product_container .product_content .product-info .product-details .description .add-info-container .short-description-content ul,
+.product_container .product_content .product-info .product-details .description .add-info-container .add-info-content ul {
+  padding-left: 20px;
+}
+.product_container .product_content .product-info .product-details .description .short-description-container .short-description-content ul .add-info-item,
+.product_container .product_content .product-info .product-details .description .short-description-container .add-info-content ul .add-info-item,
+.product_container .product_content .product-info .product-details .description .add-info-container .short-description-content ul .add-info-item,
+.product_container .product_content .product-info .product-details .description .add-info-container .add-info-content ul .add-info-item {
+  position: relative;
+  list-style-type: none;
+  padding-left: 33px;
+  line-height: 25px;
+}
+.product_container .product_content .product-info .product-details .description .short-description-container .short-description-content ul .add-info-item::before,
+.product_container .product_content .product-info .product-details .description .short-description-container .add-info-content ul .add-info-item::before,
+.product_container .product_content .product-info .product-details .description .add-info-container .short-description-content ul .add-info-item::before,
+.product_container .product_content .product-info .product-details .description .add-info-container .add-info-content ul .add-info-item::before {
+  content: "";
+  display: block;
+  width: 22px;
+  height: 22px;
+  background-size: 11px;
+  background-color: #5f6d92;
+  background-image: url("../assets/check-marks.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 50%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  border: 1px solid #fff;
 }
 
 * {
