--- a/src/styles/_productsPage.scss
+++ b/src/styles/_productsPage.scss
@@ -13,17 +13,18 @@
         .product-info {
             display: flex;
             width: 100%;
-            height: 520px;
-            // max-height: 520px;
-            // height: min-content;
 
             .product-images {
                 display: flex;
+                align-items: center;
                 width: 50%;
                 margin: 0 12px;
+                max-height: 520px;
+                position: sticky;
+                top: 75px;
 
                 .gallery {
-                    width: 20%;
+                    width: 18%;
                     height: 100%;
                     max-height: 500px;
                     display: flex;
@@ -39,7 +40,7 @@
                 }
 
                 .gallery-slider {
-                    width: 20%;
+                    width: 18%;
                     padding: 15px 0;
 
                     .slick-slide {
@@ -83,7 +84,7 @@
                 .image-slider {
                     display: flex;
                     align-items: center;
-                    width: 80%;
+                    width: 82%;
 
                     .slick-list {
                         .slick-track {
@@ -92,13 +93,11 @@
                         }
 
                         .slick-slide {
-                            padding: 0 25px;
+                            padding: 0 10px;
                             display: flex;
                             justify-content: center;
 
                             div {
-                                // min-height: 400px;
-
                                 img {
                                     max-height: 540px;
                                     padding: 20px 0;
@@ -111,6 +110,8 @@
                         width: 35px;
                         height: 35px;
                         z-index: 10;
+                        border: 3px solid transparent;
+                        background-color: rgba(255, 255, 255, 0.5);
 
                         &::before {
                             content: '';
@@ -266,43 +267,137 @@
                         }
                     }
                 }
+
+                .characteristics-block {
+                    margin: 25px 0;
+
+                    .subtitle {
+                        margin-bottom: 15px;
+                        font-size: 23px;
+                    }
+
+                    .characteristic {
+                        display: flex;
+                        align-items: center;
+                        padding: 5px 0;
+                        border-bottom: 1px solid #ebebeb;
+
+                        .title {
+                            width: 35%;
+                            padding: 5px 0;
+                            font-weight: bold;
+                            display: inline-block;
+                            font-size: 15px;
+                        }
+
+                        .body {
+                            width: 60%;
+                            margin-left: 10px;
+                            padding: 5px 0;
+                            display: inline-block;
+                            font-size: 15px;
+                        }
+                    }
+                }
+
+                .description {
+                    margin: 10px 0;
+
+                    .short-description-container,
+                    .add-info-container {
+                        padding: 0 3px;
+                        border-bottom: 1px solid #ebebeb;
+
+                        .short-description-header,
+                        .add-info-header {
+                            font-size: 15px;
+                            padding: 10px 0;
+                            cursor: pointer;
+                            position: relative;
+
+                            &::after {
+                                top: 7px;
+                                right: 8px;
+                                font-size: 20px;
+                                font-weight: normal;
+                                position: absolute;
+                                color: #5f6d92;
+                            }
+
+                            &.down {
+                                font-weight: normal;
+
+                                &::after {
+                                    content: '+';
+                                }
+                            }
+
+                            &.up {
+                                font-weight: bold;
+
+                                &::after {
+                                    content: '-';
+                                }
+                            }
+                        }
+
+                        .short-description-content,
+                        .add-info-content {
+                            margin: 10px 0 25px 0;
+                            overflow: hidden;
+                            transition: .4s all ease-in-out;
+
+                            &.hidden {
+                                margin: 0;
+                                height: 0 !important;
+                            }
+
+                            .short-description-item,
+                            .title {
+                                font-size: 15px;
+                                margin: 20px 0;
+                                line-height: 25px;
+
+                                &:first-child {
+                                    margin-top: 0;
+                                }
+
+                                &:last-child {
+                                    margin-bottom: 0;
+                                }
+                            }
+
+                            ul {
+                                padding-left: 20px;
+
+                                .add-info-item {
+                                    position: relative;
+                                    list-style-type: none;
+                                    padding-left: 33px;  
+                                    line-height: 25px;                                  
+
+                                    &::before {
+                                        content: '';
+                                        display: block;
+                                        width: 22px;
+                                        height: 22px;
+                                        background-size: 11px;
+                                        background-color: #5f6d92;
+                                        background-image: url('../assets/check-marks.svg');
+                                        background-repeat: no-repeat;
+                                        background-position: center;
+                                        border-radius: 50%;
+                                        position: absolute;
+                                        left: 0;
+                                        top: 0;
+                                        border: 1px solid #fff;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
             }
-        }
-
-        .description {
-            width: 100%;
-            padding: 0 20px;
-
-            .characteristics-block {
-                margin: 25px 0;
-                width: 50%;
-
-                .subtitle {
-                    margin-bottom: 15px;
-                    font-size: 23px;
-                }
-
-                .characteristic {
-                    display: flex;
-                    align-items: center;
-                    padding: 5px 0;
-                    border-bottom: 1px solid #ebebeb;
-
-                    .title {
-                        width: 35%;
-                        padding: 5px 0;
-                        font-weight: bold;
-                        display: inline-block;
-                    }
-
-                    .body {
-                        width: 60%;
-                        margin-left: 10px;
-                        padding: 5px 0;
-                        display: inline-block;
-                    }
-                }
-            }       
         }
     }
 }
