add ShippingAndPayment page

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1205,6 +1205,52 @@
   border: 1px solid #fff;
 }
 
+.shipping-and-payment {
+  align-self: center;
+  flex-direction: column;
+  margin-bottom: 50px;
+}
+.shipping-and-payment .title {
+  margin: 30px 0;
+  font-size: 35px;
+}
+.shipping-and-payment .shipping-and-payment_content .subtitle {
+  font-size: 21px;
+  margin: 15px 0;
+  display: inline-block;
+}
+.shipping-and-payment .shipping-and-payment_content p {
+  margin: 12px 0;
+  font-size: 16px;
+  line-height: 28px;
+}
+.shipping-and-payment .shipping-and-payment_content ul {
+  padding-left: 20px;
+}
+.shipping-and-payment .shipping-and-payment_content ul .item {
+  position: relative;
+  list-style-type: none;
+  padding-left: 33px;
+  line-height: 25px;
+  margin: 5px 0;
+}
+.shipping-and-payment .shipping-and-payment_content ul .item::before {
+  content: "";
+  display: block;
+  width: 22px;
+  height: 22px;
+  background-size: 11px;
+  background-color: #5f6d92;
+  background-image: url("../assets/check-marks.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 50%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  border: 1px solid #fff;
+}
+
 * {
   margin: 0;
   padding: 0;
