--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1140,6 +1140,8 @@
   -webkit-user-select: none;
      -moz-user-select: none;
           user-select: none;
+  color: inherit;
+  text-decoration: none;
 }
 .buyers .card__wrapper .card-buyers .card-name {
   padding: 20px 25px;
@@ -1159,74 +1161,42 @@
   margin-left: 25px;
 }
 
-.about {
-  align-self: center;
-  flex-direction: column;
-  margin-bottom: 50px;
-}
-.about .title {
-  margin: 30px 0;
-  font-size: 35px;
-}
-.about .about_content .subtitle {
-  font-size: 21px;
-  margin: 15px 0;
-  display: inline-block;
-}
-.about .about_content p {
-  margin: 12px 0;
-  font-size: 16px;
-  line-height: 28px;
-}
-.about .about_content ul {
-  padding-left: 20px;
-}
-.about .about_content ul .item {
-  position: relative;
-  list-style-type: none;
-  padding-left: 33px;
-  line-height: 25px;
-  margin: 5px 0;
-}
-.about .about_content ul .item::before {
-  content: "";
-  display: block;
-  width: 22px;
-  height: 22px;
-  background-size: 11px;
-  background-color: #5f6d92;
-  background-image: url("../assets/check-marks.svg");
-  background-repeat: no-repeat;
-  background-position: center;
-  border-radius: 50%;
-  position: absolute;
-  left: 0;
-  top: 0;
-  border: 1px solid #fff;
-}
-
+.about,
 .shipping-and-payment {
   align-self: center;
   flex-direction: column;
   margin-bottom: 50px;
 }
+.about .title,
 .shipping-and-payment .title {
   margin: 30px 0;
   font-size: 35px;
 }
+.about .about_content .subtitle,
+.about .shipping-and-payment_content .subtitle,
+.shipping-and-payment .about_content .subtitle,
 .shipping-and-payment .shipping-and-payment_content .subtitle {
   font-size: 21px;
   margin: 15px 0;
   display: inline-block;
 }
+.about .about_content p,
+.about .shipping-and-payment_content p,
+.shipping-and-payment .about_content p,
 .shipping-and-payment .shipping-and-payment_content p {
   margin: 12px 0;
   font-size: 16px;
   line-height: 28px;
 }
+.about .about_content ul,
+.about .shipping-and-payment_content ul,
+.shipping-and-payment .about_content ul,
 .shipping-and-payment .shipping-and-payment_content ul {
   padding-left: 20px;
 }
+.about .about_content ul .item,
+.about .shipping-and-payment_content ul .item,
+.shipping-and-payment .about_content ul .item,
 .shipping-and-payment .shipping-and-payment_content ul .item {
   position: relative;
   list-style-type: none;
@@ -1234,6 +1204,9 @@
   line-height: 25px;
   margin: 5px 0;
 }
+.about .about_content ul .item::before,
+.about .shipping-and-payment_content ul .item::before,
+.shipping-and-payment .about_content ul .item::before,
 .shipping-and-payment .shipping-and-payment_content ul .item::before {
   content: "";
   display: block;
