--- a/src/styles/_buyers.scss
+++ b/src/styles/_buyers.scss
@@ -20,6 +20,8 @@
             background-color: #fff;
             transition: 1s all ease;
             user-select: none;
+            color: inherit;
+            text-decoration: none;
 
             .card-name {
                 padding: 20px 25px;
