--- a/src/styles/_category.scss
+++ b/src/styles/_category.scss
@@ -55,6 +55,8 @@
             background-color: #fff;
             position: relative;
             cursor: pointer;
+            text-decoration: none;
+            color: inherit;
 
             .card-title {
                 padding: 25px 55px;
