--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -102,6 +102,9 @@
   cursor: pointer;
   text-decoration: none;
   color: inherit;
+  display: flex !important;
+  flex-direction: column;
+  align-items: center;
 }
 .category .slick-slider .category-card .card-title {
   padding: 25px 55px;
@@ -112,8 +115,7 @@
   transition: all 1s ease;
 }
 .category .slick-slider .category-card .card-img {
-  position: absolute;
-  width: 100%;
+  width: 90%;
   background-size: 100%;
   margin-top: 50px;
   transition: all 0.85s ease;
@@ -122,7 +124,7 @@
   opacity: 0;
 }
 .category .slick-slider .category-card:hover > .card-img {
-  margin-top: -30px;
+  margin-top: -20px;
 }
 
 .discounts {
@@ -455,10 +457,34 @@
   display: flex;
   flex-direction: column;
 }
+.shop_container .sidebar .category-block .all-category {
+  margin-bottom: 10px;
+}
+.shop_container .sidebar .category-block .all-category a {
+  padding: 5px 0;
+}
+.shop_container .sidebar .category-block .all-category a span {
+  transition: 1s all ease-in-out;
+}
+.shop_container .sidebar .category-block .all-category a span:hover {
+  color: #5f6d92;
+}
+.shop_container .sidebar .category-block .all-category a span::before {
+  content: "";
+  width: 16px;
+  height: 16px;
+  display: inline-block;
+  margin: -2px 10px -2px 0;
+  background-size: contain;
+  background-image: url("../assets/arrow-left.svg");
+}
 .shop_container .sidebar .category-block a {
   text-decoration: none;
   padding: 5px 10px;
   color: #333;
+}
+.shop_container .sidebar .category-block a:has(> b) {
+  background-color: #ebebeb;
 }
 .shop_container .sidebar .filter-block {
   margin: 10px 10px 0;
