--- a/src/styles/_sidebar.scss
+++ b/src/styles/_sidebar.scss
@@ -15,10 +15,40 @@
             display: flex;
             flex-direction: column;
 
+            .all-category {
+                margin-bottom: 10px;
+
+                a {
+                    padding: 5px 0;
+
+                    span {
+                        transition: 1s all ease-in-out;
+
+                        &:hover {
+                            color: #5f6d92;
+                        }
+
+                        &::before {
+                            content: '';
+                            width: 16px;
+                            height: 16px;
+                            display: inline-block;
+                            margin: -2px 10px -2px 0;
+                            background-size: contain;
+                            background-image: url("../assets/arrow-left.svg");
+                        }
+                    }
+                }
+            }
+
             a {
                 text-decoration: none;
                 padding: 5px 10px;
                 color: #333;
+
+                &:has(> b) {
+                    background-color: #ebebeb;
+                }
             }
         }
 
