--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -16,6 +16,12 @@
 
 @import 'contacts';
 
+@import 'searchMenu';
+@import 'header';
+@import 'footer';
+
+@import 'sidebarWindow';
+
 * {
     margin: 0;
     padding: 0;
